# mos

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  run-tests.sh  tags  x86_64-mos.json
.cargo/: config
docs/: binutils.md
initrd/: hello_world  msh
lib/alloc_dummy/: Cargo.toml
lib/alloc_dummy/src/: lib.rs
lib/librust/: Cargo.toml  Xargo.toml
lib/librust/src/: lib.rs  static_string.rs  syscall.rs  x86_64.rs
lib/librust/src/collections/: linked_list.rs
lib/librust/src/std/: mod.rs  screen.rs  time.rs
lib/librust/src/std/screen/: mod.rs  style.rs
lib/librust/src/syscall/: calls.rs  fs.rs  io.rs  mod.rs  uname.rs
lib/malloc/alloc_dummy/src/: lib.rs
lib/userspace/hello_world/: Cargo.toml  x86_64-hello_world.json
lib/userspace/hello_world/src/: main.rs
lib/userspace/msh/: Cargo.toml  Makefile
lib/userspace/msh/src/: main.rs
librust/: Cargo.toml
librust/src/: lib.rs  syscall.rs
malloc/alloc_dummy/: Cargo.toml
os_binaries/asm_hello/: asm_hello.asm  linker.ld
os_binaries/hello_world/: Cargo.toml  Makefile  x86_64-hello_world.json
os_binaries/hello_world/src/: main.rs
os_binaries/mos_hello/: Cargo.toml  Makefile
os_binaries/mos_hello/src/: main.rs
os_binaries/moshell/: Cargo.toml  Makefile
os_binaries/moshell/src/: main.rs
os_binaries/msh/: Cargo.toml  x86_64-msh.json
os_binaries/msh/src/: main.rs
src/: constants.rs  lib.rs  logging.rs  main.rs  serial.rs  utils.rs  x86.rs
src/bin_helpers/hello/: mod.rs
src/binaries/: mod.rs
src/binaries/init/: mod.rs
src/boot/: boot.asm  initrd.rs  mod.rs  multiboot.rs
src/boot/initrd/: file1.txt  file2.txt  initrd.txt
src/boot/loader/: boot.asm  checks.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
src/cmos/: mod.rs  time.rs
src/cpuio/: mod.rs  x86.rs
src/drivers/: mod.rs  pit.rs  serial.rs
src/drivers/keyboard/: mod.rs
src/drivers/pic8259/: mod.rs
src/drivers/vga_buffer/: colors.rs  macroses.rs  mod.rs
src/fs/: mod.rs  tarfs.rs  test_data.rs  utils.rs  vfs.rs
src/init/: mod.rs
src/interrupts/: idt.rs  irs.rs  mod.rs
src/keyboard/: codes.rs  mod.rs  polling.rs
src/memory/: allocator.rs  constants.rs  mod.rs  simple_allocator.rs  simple_frame_allocator.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
src/multitasking/: constants.rs  context.rs  focus.rs  mod.rs  process.rs  scheduler.rs  stdio.rs  switch_to.asm
src/pic8259/: mod.rs
src/sys/: constants.rs  errno.rs  handlers.rs  lib.rs  mod.rs  syscall.rs  time.rs
src/sys/collections/: linked_list.rs
src/sys/elf/: mod.rs
src/sys/handlers/: fs.rs  io.rs  mem.rs  mod.rs  utils.rs
src/sys/interrupts/: idt.rs  mod.rs  tss.rs
src/tasking/: mod.rs
src/user/: mod.rs
src/user/init/: mod.rs
src/user/msh/: constants.rs  embedded_commands.rs  mod.rs  msh.rs  utils.rs
src/user/tasks/: mod.rs
src/vga_buffer/: mod.rs
src_old/grub/: grub.cfg
