[package]
name = "mos"
version = "0.0.1"
authors = ["Alexander Akhmetov <me@aleks.sh>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
volatile = "0.2.3"
spin = "0.4.10"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"
multiboot2 = "0.3.2"
tar = { git = "ssh://git@gitlab.com/akhmetov/tar.git", tag = "0.0.1" }

[package.metadata.bootimage]
default-target = "x86_64-mos.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

[features]
integration-test = []
