[package]
name = "alloc_dummy"
version = "0.2.0"
authors = ["Alexander Akhmetov <me@aleks.sh>"]
edition = "2018"

[dependencies]
librust = { path = "../librust" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
